--- a/app/src/main/res/layout/item_center.xml
+++ b/app/src/main/res/layout/item_center.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/center_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_margin="10dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_weight="1"
+        android:textStyle="bold"
+        android:textSize="16sp"
         android:text="Name"/>
 
     <TextView
         android:id="@+id/center_identifier"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginStart="100dp"
-        android:layout_toRightOf="@+id/center_name"
-        android:layout_toEndOf="@+id/center_name"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:textStyle="italic"
+        android:textSize="14sp"
         android:text="CID"/>
 
     <Button
         android:id="@+id/view_center_roster"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:padding="10dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:text="View Roster"/>
+        android:layout_weight="1"
+        android:text="Roster"/>
 
-</RelativeLayout>
+</LinearLayout>
