add navigation drawer

--- a/app/src/main/res/layout/activity_participant_details.xml
+++ b/app/src/main/res/layout/activity_participant_details.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_participant_details"
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/roster_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Editable Participant Roster data will be displayed here"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+    <FrameLayout
+        android:id="@+id/roster_item_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</RelativeLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/roster_drawer_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:menu="@menu/drawer_menu">
+        
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
