--- a/app/src/main/res/menu/roster_menu.xml
+++ b/app/src/main/res/menu/roster_menu.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context=".RosterActivity">
+
     <item
         android:id="@+id/add_participant"
         android:title="New Participant"
-        android:showAsAction="ifRoom|withText" />
+        app:showAsAction="ifRoom|withText" />
+
 </menu>
