--- a/app/src/main/res/layout/activity_participant_details.xml
+++ b/app/src/main/res/layout/activity_participant_details.xml
@@ -6,10 +6,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/roster_item_container"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/roster_item_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/roster_item_container">
+
+            <Button
+                android:id="@+id/previous_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:padding="20dp"
+                android:text="PREVIOUS"
+                android:theme="@style/ButtonTheme"
+                android:textColor="@android:color/white"/>
+
+            <Button
+                android:id="@+id/next_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:padding="20dp"
+                android:text="NEXT"
+                android:theme="@style/ButtonTheme"
+                android:textColor="@android:color/white"/>
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/save_participant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp"
+            android:padding="20dp"
+            android:layout_centerHorizontal="true"
+            android:theme="@style/ButtonTheme"
+            android:textColor="@android:color/white"
+            android:text="SAVE" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/roster_drawer_view"
