--- a/app/src/main/res/layout/activity_roster.xml
+++ b/app/src/main/res/layout/activity_roster.xml
@@ -23,7 +23,7 @@
 
         </LinearLayout>
 
-        <org.chpir.android.roster.custom_views.OHScrollView
+        <org.chpir.android.roster.CustomViews.OHScrollView
             android:id="@+id/header_scroll"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
@@ -37,7 +37,7 @@
                 android:background="@android:color/black">
 
             </TableLayout>
-        </org.chpir.android.roster.custom_views.OHScrollView>
+        </org.chpir.android.roster.CustomViews.OHScrollView>
     </LinearLayout>
 
     <ScrollView
@@ -62,7 +62,7 @@
 
             </LinearLayout>
 
-            <org.chpir.android.roster.custom_views.OHScrollView
+            <org.chpir.android.roster.CustomViews.OHScrollView
                 android:id="@+id/content_scroll"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
@@ -76,7 +76,7 @@
                     android:background="@android:color/black">
 
                 </TableLayout>
-            </org.chpir.android.roster.custom_views.OHScrollView>
+            </org.chpir.android.roster.CustomViews.OHScrollView>
         </LinearLayout>
     </ScrollView>
 
