--- a/app/src/main/res/menu/participant_editor_menu.xml
+++ b/app/src/main/res/menu/participant_editor_menu.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menu_item_previous"
+          android:icon="@mipmap/ic_arrow_back"
+          android:title="@string/previous"
+          app:showAsAction="always|withText" />
     <item
         android:id="@+id/save_new_participant"
         android:icon="@mipmap/ic_save"
         android:title="@string/save"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_item_next"
+          android:icon="@mipmap/ic_arrow_forward"
+          android:title="@string/next"
+          app:showAsAction="always|withText" />
 </menu>
