--- a/app/src/main/res/layout/activity_response_viewer.xml
+++ b/app/src/main/res/layout/activity_response_viewer.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:weightSum="1">
 
     <TextView
+        android:id="@+id/response_viewer_label"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="     participant id                response"
-        android:id="@+id/response_viewerLable"
         android:layout_gravity="center_horizontal"
-        android:gravity="center|left" />
+        android:gravity="center|start"
+        android:text="@string/participant_id_response"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <ListView
         android:id="@+id/responseListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.00" />
+        android:layout_height="0dp"
+        android:layout_weight="1.00"/>
 </LinearLayout>
